tdf#118429 Provide unsigned signature image

when creating signature line.
OOXML Export expects this.

Change-Id: Ib6ab1f879c5ef27e8347002576ba95104117cadd
Reviewed-on: https://gerrit.libreoffice.org/56576
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit b80207f5ac67ff585ce10f741803df12d3a308a7)
Reviewed-on: https://gerrit.libreoffice.org/56587
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>